--- a/Travel/travel website/css/style.css
+++ b/Travel/travel website/css/style.css
@@ -363,8 +363,7 @@ section {
 .shop .slide .image img {
   height: 100%;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: contain;
 }
 
 .shop .slide .image .icons {
