--- a/Travel/travel website/css/style.css
+++ b/Travel/travel website/css/style.css
@@ -92,9 +92,10 @@ section {
 }
 
 .header .navbar a {
-  margin-left: 2rem;
-  font-size: 1.7rem;
+  font-size: 32px;
   color: #10221b;
+  padding: 0px 24px;
+  font-weight: 700;
 }
 
 .header .navbar a:hover {
